--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,16 @@ codegen/
 
 # Data files
 *.nc
+*.dbd
+*.dbdasc
+*.ebd
+*.ebdasc
+*.wav
+
+labsimtests/
+2024 nc/
+
+Technical paper/
 
 # Tools
 DMON software/
